feat: Update project with new features and dependencies
This commit updates wrangler.toml with new configuration, adds new dependencies to package.json and modifies the index.js file to add new functionalities. The changes made are:

- Removed unnecessary comments and old configurations from wrangler.toml and added a new placement configuration.
- Added new dependencies to package.json: "cloudflare-worker-request-data", "openai", and "reflare".
- Updated pnpm-lock.yaml with new dependencies and their details.
- Modified index.js to include new functionalities related to proxy request handling, stream chat completions and response modification based on the request path.

The new changes provide the project with more functionalities and updates its dependencies.

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "devDependencies": {
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "cloudflare-worker-request-data": "^1.0.1",
+    "openai": "^4.25.0",
+    "reflare": "^1.1.5"
   }
 }
