--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,11 @@ compatibility_date = "2024-01-17"
 mode = "smart"
 
 
+[vars]
+RAYCAST_URL_DOMAIN = "backend.raycast.com"
+OPENAI_API_KEY = "sk-xxxxxx"
+OPENAI_API_BASE = "https://{YOUR_OPENAI_API_BASE}/v1"
+
+[[kv_namespaces]]
+binding = "RAYCAST_PRO_PROXY"
+id = ""
